--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -6,6 +6,8 @@
     = javascript_include_tag :application
     = csrf_meta_tags
   %body
+    %ul.hmenu
+      = render 'navigation'
     - flash.each do |name, msg|
       = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
     = yield
