--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,13 +1,57 @@
-!!!
-%html
+!!! 5
+%html{:lang => "ja"}
   %head
-    %title TrpgRolling
-    = stylesheet_link_tag :application
-    = javascript_include_tag :application
+    %meta{:charset => "utf-8"}/
+    %title= content_for?(:title) ? yield(:title) : "TrpgRolling"
     = csrf_meta_tags
+    / Le HTML5 shim, for IE6-8 support of HTML elements
+    /[if lt IE 9]
+      = javascript_include_tag "http://html5shim.googlecode.com/svn/trunk/html5.js"
+    / Le styles
+    = stylesheet_link_tag "application", :media => "all"
+    :css
+      body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+      }
+    / Le fav and touch icons
+    %link{:href => "images/favicon.ico", :rel => "shortcut icon"}/
+    %link{:href => "images/apple-touch-icon.png", :rel => "apple-touch-icon"}/
+    %link{:href => "images/apple-touch-icon-72x72.png", :rel => "apple-touch-icon", :sizes => "72x72"}/
+    %link{:href => "images/apple-touch-icon-114x114.png", :rel => "apple-touch-icon", :sizes => "114x114"}/
+
+
   %body
-    %ul.hmenu
-      = render 'navigation'
-    - flash.each do |name, msg|
-      = content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String)
-    = yield
+    .navbar.navbar-fixed-top
+      .navbar-inner
+        .container-fluid
+          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
+            %span.i-bar
+            %span.i-bar
+            %span.i-bar
+          %a.brand{:href => "#"}TrpgRolling
+          .container-fluid.nav-collapse
+            %ul.nav
+              = render "navigation"
+
+    .container-fluid
+
+      .row-fluid
+        .span3
+          .well.sidebar-nav
+            %ul.nav.nav-list
+              %li.nav-header Sidebar
+              %li= link_to "Link 1", "/path1"
+              %li= link_to "Link 2", "/path2"
+              %li= link_to "Link 3", "/path3"
+        .span9
+          - flash.each do |name, msg|
+            = content_tag :div, msg, :id => "flash_#{name}", :class => "alert" if msg.is_a?(String)
+          = yield
+    
+      %footer
+        %p &copy; Company 2012
+    /
+      Le javascript
+      \==================================================
+    / Placed at the end of the document so the pages load faster
+    = javascript_include_tag "application"
