ログイン関連のレイアウトを編集

--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,7 +1,7 @@
 %h2
   ユーザー情報の編集
 %div
-  = form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-horizontal'}, :builder => BootstrapFormBuilder) do |f|
+  = bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put, :class => 'form-horizontal'}) do |f|
 
     = f.control_group :name do
       = f.text_field :name
@@ -14,13 +14,13 @@
       %p.help-block
         変更しない場合は空白にしておいて下さい
 
-    = f.control_group :password_confirmation do
+    = f.control_group :password_confirmation, label: '現在のパスワード' do
       = f.password_field :password_confirmation
 
-    = f.control_group :current_password do
+    = f.control_group :current_password, label: '新しいパスワード' do
       = f.password_field :current_password
       %p.help-block
-        we need your current password to confirm your changes
+        パスワードの変更の際は、変更前と、変更後のパスワードを入力する必要があります
 
     %div.form-actions
       = f.submit "Update", class: 'btn-warning'
