--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,16 +1,13 @@
-%h2 Sign up
-= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :builder => BootstrapFormBuilder) do |f|
-  %div
-    = f.control_group :name do
-      = f.text_field :name
-  %div
-    = f.control_group :email do
-      = f.email_field :email
-  %div
-    = f.control_group :password do
-      = f.password_field :password
-  %div
-    = f.control_group :password_confirmation do
-      = f.password_field :password_confirmation
-  %div= f.submit "Sign up", :class => "btn"
+%h2 アカウント登録
+= bootstrap_form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f|
+  = f.control_group :name do
+    = f.text_field :name
+  = f.control_group :email do
+    = f.email_field :email
+  = f.control_group :password do
+    = f.password_field :password
+  = f.control_group :password_confirmation do
+    = f.password_field :password_confirmation
+  %div.form-actions
+    = f.submit "Sign up", :class => "btn-primary"
 = render :partial => "devise/shared/links"
