Room関連のビューを調整

--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -6,3 +6,5 @@
   %li= link_to 'edit account', edit_user_registration_path
 - else
   %li= link_to 'sign up', new_user_registration_path
+
+%li= link_to 'Rooms', rooms_path
