--- a/app/views/rooms/_form.html.haml
+++ b/app/views/rooms/_form.html.haml
@@ -1,18 +1,13 @@
-= form_for @room do |f|
-  -if @room.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@room.errors.count, "error")} prohibited this room from being saved:"
-      %ul
-        - @room.errors.full_messages.each do |msg|
-          %li= msg
-  .field
-    = f.label :title
+= bootstrap_form_for @room, html: {class: "form-horizontal"} do |f|
+
+  = f.control_group :title do
     = f.text_field :title
-  .field
-    = f.label :context
-    = f.text_field :context
-  .field
-    = f.label :static
-    = f.check_box :static
-  .actions
-    = f.submit 'Save'
+
+  = f.control_group :description do
+    = f.text_area :description, class: "input-xlarge", rows: 3
+
+  = f.control_group :static  do
+    = f.check_box :static, class: "checkbox"
+
+  .form-actions
+    = f.submit 'Save', class: 'btn-primary'
