Worldモデルを作成した。

--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -7,4 +7,5 @@
 - else
   %li= link_to 'sign up', new_user_registration_path
 
+%li= link_to 'Worlds', worlds_path
 %li= link_to 'Rooms', rooms_path
