ヘッダにトップページへのリンクを作成

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
             %span.i-bar
             %span.i-bar
             %span.i-bar
-          %a.brand{:href => "#"}TrpgRolling
+          = link_to 'TrpgRolling', root_path, class: "brand"
           .container-fluid.nav-collapse
             %ul.nav
               = render "navigation"
