--- a/app/views/game_systems/_form.html.haml
+++ b/app/views/game_systems/_form.html.haml
@@ -1,16 +1,11 @@
-= form_for @game_system do |f|
-  -if @game_system.errors.any?
-    #error_explanation
-      %h2= "#{pluralize(@game_system.errors.count, "error")} prohibited this game_system from being saved:"
-      %ul
-        - @game_system.errors.full_messages.each do |msg|
-          %li= msg
+= simple_form_for @game_system do |f|
+  -if f.error_notification
+    .alert.alert-error
+      = f.error_notification
 
-  .field
-    = f.label :name
-    = f.text_field :name
-  .field
-    = f.label :description
-    = f.text_field :description
-  .actions
-    = f.submit 'Save'
+  = f.input :name
+
+  = f.input :description, as: :text, input_html: {class: "input-xlarge", rows: 3}
+
+  .form-actions
+    = f.submit 'Save', class: 'btn btn-primary'
