--- a/app/views/rooms/_form.html.haml
+++ b/app/views/rooms/_form.html.haml
@@ -1,13 +1,7 @@
-= bootstrap_form_for @room, html: {class: "form-horizontal"} do |f|
+= simple_form_for @room, html: {class: "form-horizontal"} do |f|
 
-  = f.control_group :title do
-    = f.text_field :title
-
-  = f.control_group :description do
-    = f.text_area :description, class: "input-xlarge", rows: 3
-
-  = f.control_group :static  do
-    = f.check_box :static, class: "checkbox"
-
+  = f.input :title
+  = f.input :description, input_html: {class: "input-xlarge", rows: 3}, as: :text
+  = f.input :static, as: :boolean
   .form-actions
-    = f.submit 'Save', class: 'btn-primary'
+    = f.submit 'Save', class: 'btn btn-primary'
