--- a/app/views/game_systems/show.html.haml
+++ b/app/views/game_systems/show.html.haml
@@ -1,12 +1,6 @@
-%p#notice= notice
+%h2= @game_system.name
 
-%p
-  %b Name:
-  = @game_system.name
-%p
-  %b Description:
-  = @game_system.description
+.well
+  = simple_format @game_system.description
 
-= link_to 'Edit', edit_game_system_path(@game_system)
-\|
 = link_to 'Back', game_systems_path
