--- a/app/views/worlds/show.html.haml
+++ b/app/views/worlds/show.html.haml
@@ -18,5 +18,8 @@
 .well
   = simple_format @world.description
 
+.form-actions
+  = link_to "Create Session", new_world_session_path(@world), class: "btn btn-primary"
+  = link_to "View Session List", world_sessions_path(@world), class: "btn"
 
 = link_to 'Back', worlds_path
