--- a/app/views/rooms/_form.html.haml
+++ b/app/views/rooms/_form.html.haml
@@ -1,4 +1,4 @@
-= simple_form_for @room, html: {class: "form-horizontal"} do |f|
+= simple_form_for [@session, @room], html: {class: "form-horizontal"} do |f|
 
   = f.input :title
   = f.input :description, input_html: {class: "input-xlarge", rows: 3}, as: :text
