show_worldビューで終了していないセッション一覧を表示するようにした。

--- a/app/views/worlds/show.html.haml
+++ b/app/views/worlds/show.html.haml
@@ -31,6 +31,6 @@
     %th GameMaster
     %th Description
     %th StartedAt
-  = render @world.sessions
+  = render @sessions
 
 = link_to 'Back', worlds_path
