change css, pre and code block.
delete border. change font color to gray

--- a/app/assets/stylesheets/bootstrap_override.css.less
+++ b/app/assets/stylesheets/bootstrap_override.css.less
@@ -2,3 +2,10 @@
 @import "twitter/bootstrap_base";
 
 // Your custom stylesheets goes here (override Less here)
+code, pre {
+    font-family: monospace;
+    color: @grayDark;
+}
+code {
+    border: none;
+}
