--- a/app/views/rooms/_form.html.haml
+++ b/app/views/rooms/_form.html.haml
@@ -1,7 +1,7 @@
-= simple_form_for [@session, @room], html: {class: "form-horizontal"} do |f|
+= simple_form_for [@parent, @room], html: {class: "form-horizontal"} do |f|
 
   = f.input :title
   = f.input :description, input_html: {class: "input-xlarge", rows: 3}, as: :text
   = f.input :static, as: :boolean
   .form-actions
-    = f.submit 'Save', class: 'btn btn-primary'
+    = f.submit :submit, class: 'btn btn-primary'
