--- a/app/views/rooms/show.html.haml
+++ b/app/views/rooms/show.html.haml
@@ -25,6 +25,9 @@
     %b Join Room
   - if @room.user == current_user
     = link_to 'Edit', edit_room_path(@room), class: 'btn'
-  = link_to 'Back', [@room.roomable, :rooms], class: 'btn'
+  - if @room.static?
+    = link_to 'Back', @room.roomable, class: 'btn'
+  - else
+    = link_to 'Back', [@room.roomable, :rooms], class: 'btn'
 
 %div{id: "room-messages-#{@room.id}"}
