--- a/app/views/worlds/_form.html.haml
+++ b/app/views/worlds/_form.html.haml
@@ -8,4 +8,4 @@
   = f.input :game_system_id, collection: GameSystem.all
 
   .form-actions
-    = f.submit 'Save', class: 'btn btn-primary'
+    = f.button :submit, class: 'btn-primary'
