--- a/app/views/worlds/show.html.haml
+++ b/app/views/worlds/show.html.haml
@@ -18,8 +18,10 @@
   ~ markdown @world.description
 
 .form-actions
-  = link_to "Create Session", new_world_session_path(@world), class: "btn btn-success"
-  = link_to "Create Static Room", new_world_room_path(@world, :static => 1), class: "btn btn-primary"
+  - if can? :create, @world.sessions.build
+    = link_to "Create Session", new_world_session_path(@world), class: "btn btn-success"
+  - if can? :create, @world.rooms.build
+    = link_to "Create Static Room", new_world_room_path(@world, :static => 1), class: "btn btn-primary"
   = link_to "View Session List", world_sessions_path(@world), class: "btn"
   = link_to "View Finished Session List", finished_world_sessions_path(@world), class: "btn"
 
