--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,26 +21,15 @@
     = javascript_include_tag "application"
 
   %body
-    .navbar.navbar-fixed-top
-      .navbar-inner
-        .container-fluid
-          %a.btn.btn-navbar{"data-target" => ".nav-collapse", "data-toggle" => "collapse"}
-            %span.i-bar
-            %span.i-bar
-            %span.i-bar
-          = link_to 'TrpgRolling', root_path, class: "brand"
-          .container-fluid.nav-collapse
-            %ul.nav
-              = render "navigation"
+    = render "navigation"
 
-    .container-fluid
-
-      .row-fluid
+    .container
+      .row
         = yield :sidebar
-        .span9
+        .span12
           - flash.each do |name, msg|
             = content_tag :div, msg, :id => "flash_#{name}", :class => "alert" if msg.is_a?(String)
           = yield
-    
-      %footer
-        %p &copy; Company 2012
+
+  %footer
+    %p &copy; Company 2012
