--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,9 +24,9 @@
     = render "navigation"
 
     .container
-      .row
+      .row-fluid
         = yield :sidebar
-        .span12
+        %div(class="#{content_for?(:sidebar) ? 'span9' : 'span12'}")
           - flash.each do |name, msg|
             = content_tag :div, msg, :id => "flash_#{name}", :class => "alert" if msg.is_a?(String)
           = yield
