--- a/app/views/characters/sword_world_rpg2/index.html.haml
+++ b/app/views/characters/sword_world_rpg2/index.html.haml
@@ -7,7 +7,7 @@
   - @characters.each do |character|
     %tr
       %td= link_to character.name, world_character_url(character.world, character.id)
-      %td= character.level
+      %td hoge
       %td
         %i.icon-user
         = link_to character.user.name, character.user
