--- a/app/views/characters/sword_world_rpg2/_form.html.haml
+++ b/app/views/characters/sword_world_rpg2/_form.html.haml
@@ -133,5 +133,17 @@
       - @combat_skills = SwordWorldRpg2::CombatSkill.all.cache
       = f.input :combat_skills, as: :select, collection: @combat_skills, :input_html => { :multiple => true, "data-placeholder" => "戦闘特技を検索" ,class: "chzn-select" }
 
+    #abilities
+      %h3 練技・呪歌など
+      = f.fields_for :abilities do |a|
+        .row
+          .span2
+            = a.input :name, input_html: {class: "span2"}
+            = a.input :description, input_html: {class: "span3"}
+          .span1.offset2.remove
+            = a.link_to_remove '<span class="btn btn-small btn-danger"><i class="icon-trash icon-white"></i></span>'.html_safe
+      = f.link_to_add "<i class=\"icon-plus icon-white\"></i>練技等を追加する".html_safe, :abilities, {class: "btn btn-info"}
+
+    %hr
     .form-actions
       = f.button :submit, class: "btn btn-primary"
