change field name status_bonus to status_equiment

--- a/app/views/characters/sword_world_rpg2/_form.html.haml
+++ b/app/views/characters/sword_world_rpg2/_form.html.haml
@@ -43,13 +43,13 @@
           .input-prepend
             %span.add-on 成長
             = f.number_field :grow_agility, class: "span1"
-        #technique-bonus.span1
+        #technique-equipment.span1
           .input-prepend
             %span.add-on 修正
-            = f.number_field :dexterity_bonus, class: "span1"
+            = f.number_field :dexterity_equipment, class: "span1"
           .input-prepend
             %span.add-on 修正
-            = f.number_field :agility_bonus, class: "span1"
+            = f.number_field :agility_equipment, class: "span1"
 
 
       .row
@@ -73,13 +73,13 @@
           .input-prepend
             %span.add-on 成長
             = f.number_field :grow_vitality, class: "span1"
-        #physique-bonus.span1
+        #physique-equipment.span1
           .input-prepend
             %span.add-on 修正
-            = f.number_field :strength_bonus, class: "span1"
+            = f.number_field :strength_equipment, class: "span1"
           .input-prepend
             %span.add-on 修正
-            = f.number_field :vitality_bonus, class: "span1"
+            = f.number_field :vitality_equipment, class: "span1"
 
 
       .row
@@ -103,13 +103,13 @@
           .input-prepend
             %span.add-on 成長
             = f.number_field :grow_mind, class: "span1"
-        #heart-bonus.span1
+        #heart-equipment.span1
           .input-prepend
             %span.add-on 修正
-            = f.number_field :intelligence_bonus, class: "span1"
+            = f.number_field :intelligence_equipment, class: "span1"
           .input-prepend
             %span.add-on 修正
-            = f.number_field :mind_bonus, class: "span1"
+            = f.number_field :mind_equipment, class: "span1"
 
     %hr
 
