--- a/app/views/characters/sword_world_rpg2/_form.html.haml
+++ b/app/views/characters/sword_world_rpg2/_form.html.haml
@@ -1,5 +1,7 @@
 #sword_world_rpg2
-  = simple_nested_form_for(@character, url: world_characters_path(@world, @character), :html => { :class => 'form-horizontal' }) do |f|
+  = simple_nested_form_for([@world, @character], :html => { :class => 'form-horizontal' }) do |f|
+    - if f.error_notification
+      = f.error_notification
 
     = f.input :name
     = f.input :gender, :collection => [:male, :female], as: :radio_buttons
