--- a/app/views/characters/sword_world_rpg2/_form.html.haml
+++ b/app/views/characters/sword_world_rpg2/_form.html.haml
@@ -115,6 +115,12 @@
 
     %hr
 
+    #languages
+      %h3 言語
+      = f.input :language, label: "会話・読解"
+      = f.input :language_speech_only, label: "会話のみ"
+      = f.input :language_read_only, label: "読解のみ"
+
     #skills
       %h3 冒険者技能
       - @skills = SwordWorldRpg2::Skill.all.cache
@@ -144,7 +150,7 @@
     #combat-skills
       %h3 戦闘特技
       - @combat_skills = SwordWorldRpg2::CombatSkill.all.cache
-      = f.input :combat_skills, as: :select, collection: @combat_skills, :input_html => { :multiple => true, "data-placeholder" => "戦闘特技を検索" ,class: "chzn-select" }, label: false
+      = f.input :combat_skill_ids, as: :select, collection: @combat_skills, :input_html => { :multiple => true, "data-placeholder" => "戦闘特技を検索" ,class: "chzn-select" }, label: false
     %hr
 
     #abilities
