--- a/app/views/application/_navigation.html.haml
+++ b/app/views/application/_navigation.html.haml
@@ -11,6 +11,7 @@
         %ul.nav.pull-right
           %li.dropdown
             %a(href="#" class="dropdown-toggle" data-toggle="dropdown")
+              = image_tag "#{(request.ssl? ? 'https://secure' : 'http://www')}.gravatar.com/avatar/#{Digest::MD5.hexdigest current_user.email}?s=30", :class => "img-rounded"
               %b
                 = current_user.name
               %b.caret
