--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
     %link{:href => "images/apple-touch-icon-114x114.png", :rel => "apple-touch-icon", :sizes => "114x114"}/
     = javascript_include_tag "application"
 
-  %body
+  %body(id="#{controller_name}-#{action_name}")
     = render "navigation"
 
     .container
